bootstrap_overrides.css
.row {
  margin-left: 0;
  margin-right: 0;
}

.navbar {
  background-color: rgb(0, 30, 80, 0.4);
  color: var(--color-white);
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 5;
  transition: all var(--animation-duration) ease-in-out;
}
.navbar.nav--dark {
  background-color: var(--color-deep-blue);
}

.navbar-brand {
  margin-left: 1rem;
}

.navbar-brand,
.navbar-nav .nav-link {
  color: var(--color-white);
}

.navbar-dark .navbar-nav .nav-link {
  color: var(--color-white);
}

.carousel-caption {
  right: 10%;
  left: 10%;
  text-align: left;
}

.container-fluid {
  padding: 0;
}

.nav_item {
  margin: 0 16px;
}

.nav-link {
  border-radius: 4px;
  outline: none;
}
.nav-link.active {
  border-bottom: 2px solid rgb(163, 161, 185);
}

.nav-link:hover {
  border-bottom: 2px solid rgb(163, 161, 185);
}

.navbar-dark .navbar-toggler {
  outline: none;
  border: none;
}

/* Contact */
.list-unstyled {
  text-align: start;
}

.footer__item {
  list-style: none;
  text-decoration: none;
  color: var(--color-grey);
}

.page-footer {
  margin-top: 4rem;
}
.footer-copyright {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-dark-blue);
  color: var(--color-white);
  height: 5rem;
  margin-top: 1rem;
}

@media screen and (max-width: 47rem) {
  .nav-link:hover {
    background-color: var(--color-blue);
  }
  .nav-link.active,
  .nav-link:hover {
    border: none;
  }
  .navbar-nav {
    background-color: var(--color-deep-blue);
    font-size: var(--font-small);
  }

  .navbar {
    padding-top: 0;
  }
  .navbar-brand {
    font-size: var(--font-small);
    margin-left: 0.2em;
    padding: 0.7rem 0;
  }

  .carousel-caption {
    transform: translateY(1.5rem);
  }

  .carousel-item {
    margin-top: 53px;
  }

  .page-footer {
    margin-top: 2rem;
  }
  .footer-copyright {
    font-size: var(--font-micro);
  }

  .navbar {
    padding-bottom: 0;
  }

  .navbar-toggler:focus {
    box-shadow: none;
  }
}

